data/derived/sp14/progs/unify/prog0406.ml.out
Characters 31-48:
  let _ = stringOfList (fun x -> int_of_string x+1) [1;2;3;4];;
                                 ^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         string
